// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With SSR Render correctly client side, forceHydration  1`] = `
<div>
  <div
    class="label"
  >
    some content client side
  </div>
</div>
`;

exports[`With SSR Render correctly client side, no option  1`] = `
<div>
  <section
    data-no-hydrate="true"
  >
    <div
      class="label"
    >
      some content sever side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, onUpdate  1`] = `
<div>
  <section
    data-no-hydrate="true"
  >
    <div
      class="label"
    >
      some content set client side via onUpdate
    </div>
  </section>
</div>
`;

exports[`Without SSR Render correctly client side, disableFallback at true 1`] = `
<div>
  <section />
</div>
`;

exports[`Without SSR Render correctly client side, no option  1`] = `
<div>
  <div
    class="label"
  >
    some content client side
  </div>
</div>
`;

exports[`Without SSR Render correctly client side, onUpdate  1`] = `
<div>
  <div
    class="label"
  >
    some content client side
  </div>
</div>
`;
